--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,8 @@ source:
 
 build:
   number: 0
+  missing_dso_whitelist:  # [linux and s390x]
+    - $RPATH/ld64.so.1    # [linux and s390x]
   run_exports:
     # Please see ABI report
     # https://abi-laboratory.pro/index.php?view=timeline&l=gdbm
